# OpenTuCo

./: .directory  CMakeLists.txt  CMakeLists.txt.user.21  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.5b40798  CMakeLists.txt.user.5b40798.4.9-pre1  CMakeLists.txt.user.7d66208  CMakeLists.txt.user.f75854c  README.md  main.cpp
OpenCS/crystals/: CMakeLists.txt
OpenCS/crystals/include/: crystal.h  crystalbuilder.h  crystalmanager.h  elasticproperties.h  node.h  realcrystal.h  realcrystalbuilder.h  unitcell.h  virtualcrystal.h  virtualcrystalbuilder.h  virtualnode.h  virtualshift.h
OpenCS/crystals/src/: crystal.cpp  crystalbuilder.cpp  node.cpp  realcrystal.cpp  realcrystalbuilder.cpp  unitcell.cpp  virtualcrystal.cpp  virtualcrystalbuilder.cpp  virtualnode.cpp
OpenCS/optimizer/: CMakeLists.txt
OpenCS/optimizer/include/: deformationmethod.h.autosave  externaloptimizer.h  methodgradientdescent.h  optimizationalgorithm.h
OpenCS/optimizer/src/: externaloptimizer.cpp  methodgradientdescent.cpp  optimizationalgorithm.cpp
OpenCS/resiprocalspace/: CMakeLists.txt
OpenCS/resiprocalspace/include/: brillouinzone.h  direction.h  reciprocalspace.h  wavevector.h
OpenCS/resiprocalspace/src/: brillouinzone.cpp  direction.cpp  reciprocalspace.cpp  wavevector.cpp
OpenCS/structures/: CMakeLists.txt
OpenCS/structures/include/: basis.h  bravaislattice.h  lattice.h  particle.h  reciprocallattice.h  structure.h  structurebuilder.h
OpenCS/structures/src/: bravaislattice.cpp  lattice.cpp  particle.cpp  structurebuilder.cpp
OpenPH/electrostatics/electricfields/: CMakeLists.txt
OpenPH/electrostatics/electricfields/include/: complexfield.h  electricfield.h  homogemiusfield.h  rotatingelectricfield.h
OpenPH/electrostatics/electricfields/src/: complexfield.cpp  electricfield.cpp  homogemiusfield.cpp  rotatingelectricfield.cpp
OpenPH/electrostatics/electricparticles/: CMakeLists.txt
OpenPH/electrostatics/electricparticles/include/: charge.h  dipole.h  electricparticle.h  quadrupole.h
OpenPH/electrostatics/electricparticles/src/: charge.cpp  dipole.cpp  electricparticle.cpp  quadrupole.cpp
OpenPH/electrostatics/kernals/: CMakeLists.txt
OpenPH/electrostatics/kernals/include/: coulombkernal.h  greenkernal.h  yukawakernal.h
OpenPH/electrostatics/kernals/src/: coulombkernal.cpp  greenkernal.cpp  yukawakernal.cpp
OpenPH/electrostatics/values/: CMakeLists.txt
OpenPH/electrostatics/values/include/: electricstrength.h  potential.h
OpenPH/electrostatics/values/src/: electricstrength.cpp  potential.cpp
OpenPH/statphys/: CMakeLists.txt
OpenPH/statphys/include/: ensemble.h  materialpoint.h  physstate.h
OpenPH/statphys/src/: physstate.cpp
OpenPR/processing/: CMakeLists.txt
OpenPR/processing/include/: dynamicstructurefactor.h  hartmanmethod.h  processing.h  wienermethod.h
OpenPR/processing/src/: processing.cpp  wienermethod.cpp
OpenPhonon/atomcrystal/: CMakeLists.txt
OpenPhonon/atomcrystal/include/: atom.h  atomcrystal.h  atompotential.h
OpenPhonon/atomcrystal/src/: atom.cpp  atomcrystal.cpp  atompotential.cpp
OpenPhonon/methods/bvk/: CMakeLists.txt
OpenPhonon/methods/bvk/include/: bornvonkarman.h  dynamicsmatrix.h  element.h  forceblocks.h  forcematrix.h
OpenPhonon/methods/bvk/src/: bornvonkarman.cpp  dynamicsmatrix.cpp  forceblocks.cpp  forcematrix.cpp
OpenPhonon/phonon/: CMakeLists.txt
OpenPhonon/phonon/include/: phonon.h  phononspectrum.h
OpenPhonon/phonon/src/: phonon.cpp  phononspectrum.cpp
source/boundaryelements/: CMakeLists.txt
source/boundaryelements/include/: boundaryelement.h  electricelement.h
source/boundaryelements/src/: boundaryelement.cpp  electricelement.cpp
source/geometry/mesh/: CMakeLists.txt
source/geometry/mesh/include/: mesh.h  polygon.h
source/geometry/mesh/src/: mesh.cpp  polygon.cpp
source/geometry/shapes/: CMakeLists.txt
source/geometry/shapes/include/: box.h  dick.h  ellipsoid.h  shape.h  sphere.h
source/geometry/shapes/src/: box.cpp  (+2 more)
source/geometry/space/: CMakeLists.txt
source/geometry/surfaces/: CMakeLists.txt
source/hamiltanian/: CMakeLists.txt
source/hamiltanian/include/: hamiltanian.h  keezomenergy.h  madelungenergy.h
source/hamiltanian/src/: hamiltanian.cpp  keezomenergy.cpp  madelungenergy.cpp
source/integralequations/: CMakeLists.txt
source/integralequations/include/: conductorscreeningequation.h  conductorscreeningmodel.h  integralequation.h  juffermodel.h  kernalset.h  pseudosurfacepolarizationmethod.h  secondyoonequation.h  surfaceenergyequation.h  surfacepolarizationequation.h  surfacepolarizationmethod.h  yoonlenhoffmethod.h
source/integralequations/src/: conductorscreeningequation.cpp  conductorscreeningmodel.cpp  integralequation.cpp  juffermodel.cpp  kernalset.cpp  pseudosurfacepolarizationmethod.cpp  secondyoonequation.cpp  surfaceenergyequation.cpp  surfacepolarizationequation.cpp  surfacepolarizationmethod.cpp  yoonlenhoffmethod.cpp
source/integration/: CMakeLists.txt
source/integration/include/: integration.h  montecarlointegration.h  symplexintegration.h
source/integration/src/: integration.cpp  montecarlointegration.cpp  symplexintegration.cpp
source/methods/bem/: CMakeLists.txt
source/methods/eem/: CMakeLists.txt
source/methods/pdm/: CMakeLists.txt
source/methods/scd/: CMakeLists.txt
source/methods/ssm/: CMakeLists.txt
source/methods/tucomethods/: CMakeLists.txt
source/particles/: CMakeLists.txt
source/particles/include/: colloid.h  corelinker.h  cscolloid.h  dipoloid.h  electricmesh.h  macroparticle.h  particlebuilder.h  physicalmesh.h  state.h
source/particles/src/: colloid.cpp  cscolloid.cpp  dipoloid.cpp  electricmesh.cpp  macroparticle.cpp  physicalmesh.cpp  state.cpp
source/systems/: CMakeLists.txt
source/systems/include/: cluster.h  crystaldeformationmethod.h  crystalfunctional.h  medium.h  stabilization.h  tunablecluster.h  tunablecrystal.h  tunablesystem.h
source/systems/src/: cluster.cpp  crystaldeformationmethod.cpp  crystalfunctional.cpp  medium.cpp  stabilization.cpp  tunablecluster.cpp  tunablecrystal.cpp  tunablesystem.cpp
(+82 files in other folders)
